--- a/deploy/index.html
+++ b/deploy/index.html
@@ -1,5 +1,5 @@
 <html>
     <body>
-        <img src="./html/deploy/ntrpic.jpg" width="100" height="100">
+        <img src="./deploy/ntrpic.jpg" width="100" height="100">
     </body>
 </html>
